<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenl"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textpoi1"
        style="@style/TextAppearance.Compat.Notification.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margingen"
        android:background="@color/green"
        android:text="@string/poi1"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageView"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margintext"
        android:src="@drawable/poi1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textpoi1" />

    <TextView
        android:id="@+id/textinfo"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margintext"
        android:text="@string/infopoi1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <ImageView
        android:id="@+id/imglocate"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/margintext"
        android:src="@drawable/locate"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textlocate"
        app:layout_constraintTop_toBottomOf="@id/textinfo"
        app:layout_constraintBottom_toTopOf="@id/textweather"/>

    <TextView
        android:id="@+id/textlocate"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margintext"
        android:text="@string/locatepoi1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textinfo" />

    <ImageView
        android:id="@+id/imgweather"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/margintext"
        android:src="@drawable/temp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textweather"
        app:layout_constraintTop_toBottomOf="@id/textlocate"
        app:layout_constraintBottom_toTopOf="@id/textinte"/>

    <TextView
        android:id="@+id/textweather"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margintext"
        android:text="@string/weatherpoi1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textlocate" />

    <TextView
        android:id="@+id/textinte"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margintext"
        android:text="@string/interestpoi1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textweather" />

    <TextView
        android:id="@+id/textother"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margintext"
        android:text="@string/otherpoi1"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textinte" />

</androidx.constraintlayout.widget.ConstraintLayout>